    changed by CONDA_BLD_PATH environment variable or conda-build: root-dir:
    in condarc file
  * add build/has_prefix_files
  * remove broken conda-build/build_dest
  * fix build in Windows Python 2
  * add --quiet option to conda-build
  * add check for characters in package name dependencies
  * add .class to the object file extension blacklist

2014-03-25   1.3.1:
-------------------
  * add conda metapackage command
  * fix recursive conda building when dependencies are nested more than one
    level deep.
  * fix build in Windows Python 2
  * fix skeleton pypi for packages whose setup.py has __future__ imports
  * add conda pipbuild command which uses a simple recipe based on pip
    install to build a conda package
  * fix skeleton pypi and pipbuild when package data does not have classifiers
  * add a basic conda develop command
  * add the --recursive option to conda skeleton pypi
  * conda skeleton pypi no longer asks about single line licenses
  * conda skeleton pypi now queries pypi case insensitively
  * conda skeleton pypi now works in a different conda environment. This
    avoids anything bad that might happen when trying to get the metadata from
    the package from messing up the root environment.
  * conda skeleton pypi now patches distribute directly. This is more robust
    than trying to insert a patch into setup.py, as was done previously.
  * allow to set the version post-build by writing a __conda_version__.txt
    file to the source directory.
  * add ability to skip binary relocation step by
    setting "build/binary_relocation: False" in meta.yaml


2014-03-14   1.3.0:
-------------------
  * add skeleton for CPAN Perl packages, issue #53. Unlike
    the PyPI skeleton, it supports a --recursive option to
    also generate the recipes for all of the dependencies of
    a given module/distribution
  * add support for run_test.pl and Perl import tests when
    building Perl packages
  * add CONDA_PERL environment variable support for