@@ -10,6 +10,9 @@
   * add --quiet option to conda-build
   * add check for characters in package name dependencies
   * add .class to the object file extension blacklist
+  * removed build/no_softlink in favor of build/no_link with list of glob
+    syntax
+
 
 2014-03-25   1.3.1:
 -------------------
